# piscine_c

./: .gitignore  README.md  Session.vim
Jour_03/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_aff_alpha.c  my_aff_chiffre.c  my_aff_comb.c  my_aff_comb2.c  my_aff_combn.c  my_aff_revalpha.c  my_isneg.c  my_put_nbr.c
Jour_04/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_getnbr.c  my_sort_int_tab.c  my_swap.c
Jour_05/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_8r1.c  my_8r2.c  my_is_prime.c  my_power_rec.c  my_put_nbr.c  my_putstr.c
Jour_06/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_getnbr_base.c  my_showmem.c  my_showstr.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcpy.c  my_strlen.c  my_strncmp.c  my_strncpy.c
Jour_07/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_aff_params.c  my_rev_params.c  my_sort_params.c  my_strcmp.c  my_strlen.c  my_strncat.c
Jour_07/libmy/: README.md  my_evil_str.c  my_factorielle_it.c  my_factorielle_rec.c  my_getnbr_base.c  my_is.c  my_power_it.c  my_put_nbr.c  my_putstr.c  my_revstr.c  my_showmem.c  my_showstr.c  my_sort_int_tab.c  my_str_isnum.c  my_strcapitalize.c  my_strcat.c  my_strncpy.c  my_strnlen.c  my_strstr.c  my_swap.c
Jour_08/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_str_to_wordtab.c  my_strdup.c  my_strndup.c  sum_params.c
Jour_09/: CMakeLists.txt  README.md  Session.vim  main.c  my.h  my_param_to_tab.c  my_show_tab.c
Jour_09/include/: my_macroABS.h
Jour_11/: CMakeLists.txt  README.md  Session.vim  do-op.c  main.c
Jour_12/: CMakeLists.txt  README.md  Session.vim  main.c  my_add_list_to_list.c  my_add_sort_list_to_sort_list.c  my_apply_on_eq_in_list.c  my_apply_on_list.c  my_find_elm_eq_in_list.c  my_find_node_eq_in_list.c  my_list_size.c  my_params_in_list.c  my_put_elem_in_sort_list.c  my_rev_list.c  my_rm_all_eq_from_list.c  my_sort_list.c
Jour_13/: CMakeLists.txt  README.md  Session.vim  cat.c  cat.h  my.h
libmy/: CMakeLists.txt  README.md  convert_base.c  is_big_endian.c  my.h  my_advanced_sort_wordtab.c  my_evil_str.c  my_factorielle_it.c  my_find_prime_sup.c  my_getnbr.c  my_getnbr_base.c  my_is.c  my_isneg.c  my_memcpy.c  my_memset.c  my_putnbr_base.c  my_revstr.c  my_show_wordtab.c  my_showstr.c  my_sort_int_tab.c  my_sort_wordtab.c  my_square_root.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_to_wordtab.c  my_strcapitalize.c  my_strcat.c  my_strcpy.c  my_strdup.c  my_strlcat.c  my_strlowcase.c  my_strncat.c  my_strncpy.c  my_strstr.c  my_strupcase.c  my_swapc.c
