cmake_minimum_required (VERSION 3.10)

project (Jour06)

set (CMAKE_C_COMPILER clang)
set (CMAKE_C_FLAGS "-W -Wall -Werror -Wextra")
set (CMAKE_BUILD_TYPE CMAKE_C_FLAGS)

add_executable (my_strcpy main.c my_strcpy.c)
add_executable (my_strncpy main.c my_strncpy.c)
add_executable (my_revstr main.c my_strlen.c my_revstr.c)
add_executable (my_strstr main.c my_strstr.c)
add_executable (my_strcmp main.c my_strcmp.c)
add_executable (my_strncmp main.c my_strncmp.c)
add_executable (my_strupcase main.c my_strupcase.c)
add_executable (my_strlowcase main.c my_strlowcase.c)
add_executable (my_strcapitalize main.c my_strcapitalize.c)
add_executable (my_str_isalpha main.c my_str_isalpha.c)
add_executable (my_str_isnum main.c my_str_isnum.c)
add_executable (my_str_islower main.c my_str_islower.c)
add_executable (my_str_isupper main.c my_str_isupper.c)
add_executable (my_str_isprintable main.c my_str_isprintable.c)
add_executable (my_putnbr_base main.c my_putchar.c my_strlen.c my_putnbr_base.c)
add_executable (my_getnbr_base main.c my_strlen.c my_strncmp.c my_getnbr_base.c)
add_executable (my_showstr main.c my_putchar.c my_putstr.c my_strlen.c my_putnbr_base.c my_showstr.c)
add_executable (my_showmem main.c my_putchar.c my_putstr.c my_strlen.c my_putnbr_base.c my_showmem.c)

target_compile_definitions (my_strcpy PUBLIC MY_STRCPY)
target_compile_definitions (my_strncpy PUBLIC MY_STRNCPY)
target_compile_definitions (my_revstr PUBLIC MY_REVSTR)
target_compile_definitions (my_strstr PUBLIC MY_STRSTR)
target_compile_definitions (my_strcmp PUBLIC MY_STRCMP)
target_compile_definitions (my_strncmp PUBLIC MY_STRNCMP)
target_compile_definitions (my_strupcase PUBLIC MY_STRUPCASE)
target_compile_definitions (my_strlowcase PUBLIC MY_STRLOWCASE)
target_compile_definitions (my_strcapitalize PUBLIC MY_STRCAPITALIZE)
target_compile_definitions (my_str_isalpha PUBLIC MY_STR_ISALPHA)
target_compile_definitions (my_str_isnum PUBLIC MY_STR_ISNUM)
target_compile_definitions (my_str_islower PUBLIC MY_STR_ISLOWER)
target_compile_definitions (my_str_isupper PUBLIC MY_STR_ISUPPER)
target_compile_definitions (my_str_isprintable PUBLIC MY_STR_ISPRINTABLE)
target_compile_definitions (my_putnbr_base PUBLIC MY_PUTNBR_BASE)
target_compile_definitions (my_getnbr_base PUBLIC MY_GETNBR_BASE)
target_compile_definitions (my_showmem PUBLIC MY_SHOWMEM)
