cmake_minimum_required (VERSION 3.10)

project (Jour12)

set (CMAKE_C_COMPILER clang)
set (CMAKE_C_FLAGS "-W -Wall -Werror -Wextra")
set (CMAKE_BUILD_TYPE CMAKE_C_FLAGS)

link_directories (./)

add_executable (my_params_in_list main.c my_params_in_list.c)
add_executable (my_list_size main.c my_params_in_list.c my_list_size.c)
add_executable (my_rev_list main.c my_params_in_list.c my_rev_list.c)
add_executable (my_apply_on_list main.c my_params_in_list.c my_rev_list.c my_apply_on_list.c)
add_executable (my_apply_on_eq_in_list main.c my_params_in_list.c my_rev_list.c my_apply_on_eq_in_list.c)
add_executable (my_find_elm_eq_in_list main.c my_params_in_list.c my_rev_list.c my_find_elm_eq_in_list.c)
add_executable (my_find_node_eq_in_list main.c my_params_in_list.c my_rev_list.c my_find_node_eq_in_list.c)
add_executable (my_rm_all_eq_from_list main.c my_params_in_list.c my_rev_list.c my_rm_all_eq_from_list.c)
add_executable (my_add_list_to_list main.c my_params_in_list.c my_rev_list.c my_add_list_to_list.c)
add_executable (my_sort_list main.c my_params_in_list.c my_rev_list.c my_sort_list.c)
add_executable (my_put_elem_in_sort_list main.c my_params_in_list.c my_rev_list.c my_sort_list.c my_put_elem_in_sort_list.c)
add_executable (my_add_sort_list_to_sort_list main.c my_params_in_list.c my_rev_list.c my_sort_list.c my_add_list_to_list.c my_add_sort_list_to_sort_list.c)

target_compile_definitions (my_params_in_list PUBLIC MY_PARAMS_IN_LIST)
target_compile_definitions (my_list_size PUBLIC MY_LIST_SIZE)
target_compile_definitions (my_rev_list PUBLIC MY_REV_LIST)
target_compile_definitions (my_apply_on_list PUBLIC MY_APPLY_ON_LIST)
target_compile_definitions (my_apply_on_eq_in_list PUBLIC MY_APPLY_ON_EQ_IN_LIST)
target_compile_definitions (my_find_elm_eq_in_list PUBLIC MY_FIND_ELM_EQ_IN_LIST)
target_compile_definitions (my_find_node_eq_in_list PUBLIC MY_FIND_NODE_EQ_IN_LIST)
target_compile_definitions (my_rm_all_eq_from_list PUBLIC MY_RM_ALL_EQ_FROM_LIST)
target_compile_definitions (my_add_list_to_list PUBLIC MY_ADD_LIST_TO_LIST)
target_compile_definitions (my_sort_list PUBLIC MY_SORT_LIST)
target_compile_definitions (my_put_elem_in_sort_list PUBLIC MY_PUT_ELEM_IN_SORT_LIST)
target_compile_definitions (my_add_sort_list_to_sort_list PUBLIC MY_ADD_SORT_LIST_TO_SORT_LIST)

target_link_libraries(my_params_in_list libmy.a)
target_link_libraries(my_list_size libmy.a)
target_link_libraries(my_rev_list libmy.a)
target_link_libraries(my_apply_on_list libmy.a)
target_link_libraries(my_apply_on_eq_in_list libmy.a)
target_link_libraries(my_find_elm_eq_in_list libmy.a)
target_link_libraries(my_find_node_eq_in_list libmy.a)
target_link_libraries(my_rm_all_eq_from_list libmy.a)
target_link_libraries(my_add_list_to_list libmy.a)
target_link_libraries(my_sort_list libmy.a)
target_link_libraries(my_put_elem_in_sort_list libmy.a)
target_link_libraries(my_add_sort_list_to_sort_list libmy.a)
